--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
+    "js-cookie": "^3.0.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
